tests/negative/gold/interface_optional_test.gold
tests/negative/interface_optional_test.toit:4:11: error: Unresolved identifier: 'unresolved'
  foo x y=unresolved --named1=unresolved --named2=2
          ^~~~~~~~~~
tests/negative/interface_optional_test.toit:4:31: error: Unresolved identifier: 'unresolved'
  foo x y=unresolved --named1=unresolved --named2=2
                              ^~~~~~~~~~
Couldn't find 'main' (with 0 or 1 argument) in entry file 'tests/negative/interface_optional_test.toit'
Compilation failed.
